logs/validate.20260408-004145.log
Mode: isolate
<<<<<<< HEAD
Isolate: including Chap18 Chap02
error: unexpected token, expected `;`
    --> src/Chap18/ArraySeq.rs:1246:41
     |
1246 | ...                   implies #[trigger] collected.seq.deep_view()[j] =~= new_collected_dv[j]
     |                               ^

error[E0425]: cannot find type `ArraySeqS` in this scope
    --> src/Chap18/ArraySeq.rs:1672:30
     |
1672 |     impl<T: Debug> Debug for ArraySeqS<T> {
     |                              ^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `ArraySeqS` in this scope
    --> src/Chap18/ArraySeq.rs:1678:34
     |
1678 |     impl<T: Display> Display for ArraySeqS<T> {
     |                                  ^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `ArraySeqIter` in this scope
    --> src/Chap18/ArraySeq.rs:1689:34
     |
1689 |     impl<'a, T: Debug> Debug for ArraySeqIter<'a, T> {
     |                                  ^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `ArraySeqIter` in this scope
    --> src/Chap18/ArraySeq.rs:1695:29
     |
1695 |     impl<'a, T> Display for ArraySeqIter<'a, T> {
     |                             ^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `ArraySeqGhostIterator` in this scope
    --> src/Chap18/ArraySeq.rs:1701:27
     |
1701 |     impl<'a, T> Debug for ArraySeqGhostIterator<'a, T> {
     |                           ^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `ArraySeqGhostIterator` in this scope
    --> src/Chap18/ArraySeq.rs:1707:29
     |
1707 |     impl<'a, T> Display for ArraySeqGhostIterator<'a, T> {
     |                             ^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 1s
Sampled Memory Usage: peak rust_verify RSS: 0MB, peak z3 RSS: 0MB, min free: 26465MB
Sampled CPU Usage: rust_verify: 0s, z3 children: 0s
=======
Isolate: including Chap37 Chap18 Chap19 Chap23 Chap02
error: assertion failed
   --> src/Chap37/BSTAVLMtEph.rs:400:33
    |
400 | ...                   T::le(z, y_val) && z != y_val
    |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ assertion failed

error: precondition not satisfied
   --> src/Chap37/BSTAVLMtEph.rs:403:37
    |
403 | ...                   T::transitive(z, x_val, y_val);
    |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
   ::: src/vstdplus/total_order.rs:42:13
    |
 42 |             Self::le(y, z),
    |             -------------- failed precondition

error: precondition not satisfied
   --> src/Chap37/BSTAVLMtEph.rs:404:53
    |
404 | ...                   if z == y_val { T::antisymmetric(x_val, y_val); }
    |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
   ::: src/vstdplus/total_order.rs:49:13
    |
 49 |             Self::le(x, y),
    |             -------------- failed precondition

note: diagnostics via expansion
  --> src/vstdplus/total_order.rs:42:13
   |
42 |             Self::le(y, z),
   |             ^^^^^^^^^^^^^^

note: 

z.le(x_val) ✔
x_val.le(y_val) ✘
    trait function (note: expand-errors is currently limited in its support for resolving generic trait functions)

verification results:: 1957 verified, 1 errors
error: aborting due to 3 previous errors

Elapsed: 13s
Sampled Memory Usage: peak rust_verify RSS: 2209MB, peak z3 RSS: 388MB, min free: 24599MB
Sampled CPU Usage: rust_verify: 20s, z3 children: 26s
>>>>>>> agent4/ready
